added two tensorflow examples

--- a/tensorflow-1.ipynb
+++ b/tensorflow-1.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "# evaluate training accuracy\n",
     "curr_W, curr_b, curr_loss  = sess.run([W, b, loss], {x:x_train, y:y_train})\n",
-    "print(\"W: %s b: %s loss: %s\"%(curr_W, curr_b, curr_loss))\n"
+    "print(\"W: %s b: %s loss: %s\"%(curr_W, curr_b, curr_loss))"
    ]
   }
  ],
